# VUT-FIT-2023-

./: .gitignore
3sem/IFJ/: CMakeLists.txt  expr_stack.h  grammar.txt  prec_table.c  test.zig
3sem/IFJ/IFJ-Project/: README.md  compiler.c  error.h  generator.h  symtable.h  token_tester.c
3sem/IFJ/IFJ-Project/doc/: LL-table.xls  plan.txt
3sem/IFJ/IFJ-Project/tests/function_calls/: test_func_arithmetic.wren  test_func_comparisons.wren  test_func_edge_cases.wren  test_func_nested.wren  test_func_return_expr.wren  test_func_user_defined.wren
3sem/IFJ/IFJ-Project/tests/lexer/errors/: test_decimal_no_fraction.wren  test_empty_hex_literal.wren  test_exponent_invalid_char.wren  test_hex_escape_nonhex.wren  test_hex_escape_space.wren  test_identifier_starts_number.wren  test_invalid_escape_b.wren  test_invalid_escape_null.wren  test_invalid_escape_sequence.wren  test_invalid_escape_v.wren  (+8 more)
3sem/IFJ/IFJ-Project/tests/syntax_errors/: test_syntax_double_plus.wren  test_syntax_empty_expr.wren  test_syntax_just_operator.wren  test_syntax_leading_plus.wren
3sem/IFJ/IFJ24-PROJEKT/: .gitignore  README.md  compile-run.sh  compile.sh  psa.c  symtable.h  tokeniser.h
3sem/IFJ/IFJ24-PROJEKT/test_ok/: parser.c  parser.h  tokeniser.c  xbabulm00.tgz
3sem/IFJ/IFJ24-PROJEKT/test_ok/testdir/: codegen.c  codegen.h  error.c  error.h  psa.h
3sem/IFJ/test_ok/: rozdeleni
3sem/IFJ/test_ok/testdir/: Makefile  expr_stack.c  ifjcompiler  main.c  prec_table.h  symtable.c
3sem/IFJ/testdir/: ast.h  compiler  generator.c  scanner.h  semantics.c  semantics.h  simple_program.wren  symtable.c
(+808 files in other folders)
